# kaggle-sartorius

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  download_data.sh  pyproject.toml
containers/base/: Dockerfile  build_container.sh
notebooks/: 1.0-Mask-RCNN-LAMBDA.ipynb  1.0-maskrcnn.ipynb  FOLD_x_cellpose-training-pipeline-LAMBDA.ipynb  PRETRAINING_cellpose-training-pipeline-LAMBDA.ipynb  cellpose-training-pipeline-LAMBDA.ipynb
src/helpers/: common.py  mk_colours.py  s3.py
