[tool.poetry]
# FIXME Change to project name
name = "sartorius"
version = "0.1.0"
description = "An instance segmentation competition on kaggle"
authors = ["Nizamuddin <nizamphoenix@gmail.com>"]
# FIXME Change to module directory; can be deleted if same as project name
packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = "~3.8"
numpy = "^1.18.1"
statsmodels="^0.13.0"
openpyxl = "^3.0.9"
pandas = "^1.0.3"
requests = "^2.24.0"
matplotlib = "^3.2.1"
Shapely = "^1.7.0"
gdown="^4.1.1"
gcloud = "^0.18.3"
google-cloud-secret-manager = "^2.7.0"
google-cloud-storage = "^1.28.1"
scikit-learn = "^0.24.2"
fsspec = "^2021.5.0"
gcsfs = "^2021.5.0"


[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
black = "^20.8b1"
mypy = "^0.812"
isort = "^5.7.0"
autoflake = "^1.4"
flake8 = "^3.8.4"
pytest-cov = "^2.11.1"
coverage = "^5.4"
pre-commit = "^2.10.1"
nbstripout = "^0.4.0"
seaborn = "^0.11.2"
ipykernel = "^6.5.0"



[tool.black]
target-version = ["py37", "py38"]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
line_length = 88
known_third_party = ["boto3", "botocore"]

[build-system]
requires = ["poetry_core>=1.1.4"]
build-backend = "poetry.core.masonry.api"
